2005-05-18  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/mod_irc_connection.erl: Added support for WHOIS
	requests and reply to USERINFO (thanks to Oleg V. Motienko)

2005-05-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/stringprep_drv.c: Bugfix

2005-05-16  Alexey Shchepin  <alexey@sevcom.net>

	* src/win32/ejabberd.cfg: Updated (thanks to Sergei Golovan)

	* src/odbc/Makefile.win32: Added (thanks to Sergei Golovan)

	* src/Makefile.win32: Updated (thanks to Sergei Golovan)

2005-05-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/jd2ejd.erl: Fixed private xml setting

	* src/mod_last.erl: Bugfix
	* src/mod_last_odbc.erl: Likewise

	* src/mod_pubsub/mod_pubsub.erl: Fixed service stopping

2005-05-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Fixed bug with storing
	affiliations of invited users in members-only room (thanks to
	Sergei Golovan)

	* src/ejabberd_c2s.erl: Fixed starttls_required behaviour for
	legacy connections (thanks to Brian Campbell)

	* src/web/ejabberd_web_admin.erl: Images now specified via CSS,
	design slightly updated, added last activity statistics (thanks to
	Sergei Golovan)

2005-05-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/stringprep_drv.c: Added check for bidi

	* src/stringprep/uni_parse.tcl: Now handle all Unicode code points
	up to U+10FFFF
	* src/stringprep/uni_parse2.tcl: Likewise
	* src/stringprep/uni_data.c: Regenerated
	* src/stringprep/uni_norm.c: Likewise

2005-05-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/stringprep/uni_norm.c: Regenerated with Unicode 3.2 tables
	as required by RFC3454

	* src/stringprep/uni_parse2.tcl: Bugfixes

	* src/stringprep/stringprep_drv.c: Bugfixes, added hangul
	composition

2005-05-05  Mickael Remond  <mremond@erlang-fr.org>

	* src/msgs/fr.msg: Added missing version 0.9 fields and removed unused
	ones.

2005-05-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Store ban reasons for outcast